--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,10 +29,10 @@ jobs:
           script_stop: true
           script: |
             ${{ secrets.PRE_COMMAND }}
-            git -C ${{ secrets.GIT_PATH }} fetch
-            git -C ${{ secrets.GIT_PATH }} reset --hard origin/main
+            git -C "${{ secrets.GIT_PATH }}" fetch
+            git -C "${{ secrets.GIT_PATH }}" reset --hard origin/main
             while read -r compose; do
               docker compose -f "$compose" up -d --quiet-pull
-            done < <(find "$HOME/homelab" -name 'compose.yml')
+            done < <(find "${{ secrets.GIT_PATH }}" -name 'compose.yml')
             docker image prune -af
             docker volume prune -af
