--- a/soft-serve/compose.yml
+++ b/soft-serve/compose.yml
@@ -10,6 +10,11 @@ services:
       SOFT_SERVE_SSH_PUBLIC_URL: ssh://$SOFT_SERVE_DOMAIN
     volumes:
       - soft-serve:/soft-serve
+    configs:
+      - source: timezone
+        target: /etc/localtime
+      - source: git_config
+        target: /root/.gitconfig
     restart: always
 
   cloudflare-tunnel:
@@ -22,3 +27,9 @@ services:
 
 volumes:
   soft-serve:
+
+configs:
+  timezone:
+    file: /etc/localtime
+  git_config:
+    file: ./config/.gitconfig
