ci(test): Don't stop testing together
Since each test does different operations.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,6 +55,7 @@ jobs:
       run:
         working-directory: ${{ matrix.compose.dir }}
     strategy:
+      fail-fast: false
       matrix:
         compose: ${{ fromJson(needs.detect.outputs.composes) }}
 
