--- a/immich/compose.yml
+++ b/immich/compose.yml
@@ -34,7 +34,7 @@ services:
 
   database:
     container_name: immich_database
-    image: tensorchord/pgvecto-rs:pg16-v0.3.0@sha256:9722631d44e76d46a8301859c46294f2c2c6a2f95e8706b55b4d654d6eaeafba
+    image: docker.io/tensorchord/pgvecto-rs:pg16-v0.3.0@sha256:9722631d44e76d46a8301859c46294f2c2c6a2f95e8706b55b4d654d6eaeafba
     environment:
       POSTGRES_HOST: $DB_HOSTNAME
       POSTGRES_DB: $DB_DATABASE_NAME
@@ -51,14 +51,14 @@ services:
 
   redis:
     container_name: immich_redis
-    image: redis:7.2.5-alpine3.19@sha256:8f157725f8eee31e65a8d4765f1f986d76aedc1a0503345dfb63a2b1b5a441ee
+    image: docker.io/redis:7.2.5-alpine3.19@sha256:8f157725f8eee31e65a8d4765f1f986d76aedc1a0503345dfb63a2b1b5a441ee
     healthcheck:
       test: redis-cli ping || exit 1
     restart: always
 
   backup-database: &backup
     container_name: immich_backup-database
-    image: offen/docker-volume-backup:v2.43.2@sha256:3f477b6cd246d63292800746e1dc417034cf9d9977145028f7fbda4e25c24211
+    image: docker.io/offen/docker-volume-backup:v2.43.2@sha256:3f477b6cd246d63292800746e1dc417034cf9d9977145028f7fbda4e25c24211
     environment:
       BACKUP_CRON_EXPRESSION: 0 5 * * *
       BACKUP_FILENAME: immich_database_%Y%m%d.{{ .Extension }}
@@ -100,7 +100,7 @@ services:
 
   cloudflare-tunnel:
     container_name: immich_cloudflare-tunnel
-    image: cloudflare/cloudflared:2025.2.0@sha256:6e2df069aaf5a8c0bf304b674ff31c0ed07c974534b4303a8c6e57d93c6c9224
+    image: docker.io/cloudflare/cloudflared:2025.2.0@sha256:6e2df069aaf5a8c0bf304b674ff31c0ed07c974534b4303a8c6e57d93c6c9224
     command: tunnel --no-autoupdate run
     environment:
       TUNNEL_TOKEN: $TUNNEL_TOKEN
