--- a/misskey/compose.yml
+++ b/misskey/compose.yml
@@ -3,7 +3,7 @@ name: misskey
 services:
   web:
     container_name: misskey_web
-    image: misskey/misskey:2025.2.0@sha256:0c6c256b7b9ab3040bb3509620b6a65e083628a473fdca174d20959dca9dab10
+    image: docker.io/misskey/misskey:2025.2.0@sha256:0c6c256b7b9ab3040bb3509620b6a65e083628a473fdca174d20959dca9dab10
     environment:
       MISSKEY_URL: $MISSKEY_URL
       DATABASE_DB: $DB_DATABASE_NAME
@@ -21,7 +21,7 @@ services:
 
   database:
     container_name: misskey_database
-    image: postgres:16.7@sha256:a35ec42526e3c522eb13b4d82eddaee875d0ac6ca9eb5cc5607e412854478c71
+    image: docker.io/postgres:16.7@sha256:a35ec42526e3c522eb13b4d82eddaee875d0ac6ca9eb5cc5607e412854478c71
     environment:
       POSTGRES_HOST: $DB_HOSTNAME
       POSTGRES_DB: $DB_DATABASE_NAME
@@ -38,14 +38,14 @@ services:
 
   redis:
     container_name: misskey_redis
-    image: redis:7.2.5-alpine3.19@sha256:8f157725f8eee31e65a8d4765f1f986d76aedc1a0503345dfb63a2b1b5a441ee
+    image: docker.io/redis:7.2.5-alpine3.19@sha256:8f157725f8eee31e65a8d4765f1f986d76aedc1a0503345dfb63a2b1b5a441ee
     healthcheck:
       test: redis-cli ping || exit 1
     restart: always
 
   backup:
     container_name: misskey_backup
-    image: offen/docker-volume-backup:v2.43.2@sha256:3f477b6cd246d63292800746e1dc417034cf9d9977145028f7fbda4e25c24211
+    image: docker.io/offen/docker-volume-backup:v2.43.2@sha256:3f477b6cd246d63292800746e1dc417034cf9d9977145028f7fbda4e25c24211
     environment:
       BACKUP_CRON_EXPRESSION: 0 5 * * *
       BACKUP_FILENAME: misskey_%Y%m%d.{{ .Extension }}
@@ -72,7 +72,7 @@ services:
 
   cloudflare-tunnel:
     container_name: misskey_cloudflare-tunnel
-    image: cloudflare/cloudflared:2025.2.0@sha256:6e2df069aaf5a8c0bf304b674ff31c0ed07c974534b4303a8c6e57d93c6c9224
+    image: docker.io/cloudflare/cloudflared:2025.2.0@sha256:6e2df069aaf5a8c0bf304b674ff31c0ed07c974534b4303a8c6e57d93c6c9224
     command: tunnel --no-autoupdate run
     environment:
       TUNNEL_TOKEN: $TUNNEL_TOKEN
