--- a/soft-serve/compose.yml
+++ b/soft-serve/compose.yml
@@ -3,7 +3,7 @@ name: soft-serve
 services:
   server:
     container_name: soft-serve_server
-    image: charmcli/soft-serve:v0.8.2@sha256:1c4482c3838a2c99377be85c5df217a09dcfa775c1a2b35e51e2cc762a574653
+    image: docker.io/charmcli/soft-serve:v0.8.2@sha256:1c4482c3838a2c99377be85c5df217a09dcfa775c1a2b35e51e2cc762a574653
     environment:
       SOFT_SERVE_INITIAL_ADMIN_KEYS: $SOFT_SERVE_INITIAL_ADMIN_KEYS
       SOFT_SERVE_NAME: $SOFT_SERVE_NAME
@@ -19,7 +19,7 @@ services:
 
   cloudflare-tunnel:
     container_name: soft-serve_cloudflare-tunnel
-    image: cloudflare/cloudflared:2025.2.0@sha256:6e2df069aaf5a8c0bf304b674ff31c0ed07c974534b4303a8c6e57d93c6c9224
+    image: docker.io/cloudflare/cloudflared:2025.2.0@sha256:6e2df069aaf5a8c0bf304b674ff31c0ed07c974534b4303a8c6e57d93c6c9224
     command: tunnel --no-autoupdate run
     environment:
       TUNNEL_TOKEN: $TUNNEL_TOKEN
