--- a/speedtest-tracker/compose.yml
+++ b/speedtest-tracker/compose.yml
@@ -3,7 +3,7 @@ name: speedtest-tracker
 services:
   speedtest-tracker:
     container_name: speedtest-tracker
-    image: linuxserver/speedtest-tracker:1.2.3@sha256:faaf05b05d754bae31f66c6cc108e68bcf2bd94706fe2a41c1be7b242b7bff61
+    image: docker.io/linuxserver/speedtest-tracker:1.2.3@sha256:faaf05b05d754bae31f66c6cc108e68bcf2bd94706fe2a41c1be7b242b7bff61
     environment:
       APP_KEY: $APP_KEY
       DB_CONNECTION: pgsql
@@ -22,7 +22,7 @@ services:
 
   database:
     container_name: speedtest-tracker_database
-    image: postgres:16.7@sha256:a35ec42526e3c522eb13b4d82eddaee875d0ac6ca9eb5cc5607e412854478c71
+    image: docker.io/postgres:16.7@sha256:a35ec42526e3c522eb13b4d82eddaee875d0ac6ca9eb5cc5607e412854478c71
     environment:
       POSTGRES_HOST: $DB_HOSTNAME
       POSTGRES_DB: $DB_DATABASE_NAME
@@ -39,7 +39,7 @@ services:
 
   backup:
     container_name: speedtest-tracker_backup
-    image: offen/docker-volume-backup:v2.43.2@sha256:3f477b6cd246d63292800746e1dc417034cf9d9977145028f7fbda4e25c24211
+    image: docker.io/offen/docker-volume-backup:v2.43.2@sha256:3f477b6cd246d63292800746e1dc417034cf9d9977145028f7fbda4e25c24211
     environment:
       BACKUP_CRON_EXPRESSION: 0 5 * * *
       BACKUP_FILENAME: speedtest-tracker_%Y%m%d.{{ .Extension }}
@@ -66,7 +66,7 @@ services:
 
   cloudflare-tunnel:
     container_name: speedtest-tracker_cloudflare-tunnel
-    image: cloudflare/cloudflared:2025.2.0@sha256:6e2df069aaf5a8c0bf304b674ff31c0ed07c974534b4303a8c6e57d93c6c9224
+    image: docker.io/cloudflare/cloudflared:2025.2.0@sha256:6e2df069aaf5a8c0bf304b674ff31c0ed07c974534b4303a8c6e57d93c6c9224
     command: tunnel --no-autoupdate run
     environment:
       TUNNEL_TOKEN: $TUNNEL_TOKEN
