chore(renovate): Allow auto merge for databases
Postgres updates its version hashes.

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -10,7 +10,7 @@
       ]
     },
     {
-      "matchPackageNames": ["docker.io/linuxserver/speedtest-tracker"],
+      "matchPackageNames": ["docker.io/postgres", "docker.io/tensorchord/pgvecto-rs", "docker.io/linuxserver/speedtest-tracker"],
       "matchUpdateTypes": ["digest"],
       "automerge": true
     }
