--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,23 +23,22 @@ jobs:
       - name: 🚚 Checkout Repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
-      - name: 🔄 Check the Changed Files
-        id: changed
-        uses: tj-actions/changed-files@9200e69727eb73eb060652b19946b8a2fdfb654b # v45.0.8
+      - name: 🔄 Filter the Changed Files
+        id: filter
+        uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
         with:
-          files_yaml: |
-            test:
-              - .github/workflows/test.yml
-            compose:
-              - "**/compose.yml"
+          filters: |
+            compose: "**/compose.yml"
+            test: .github/workflows/test.yml
+          list-files: shell
 
       - name: 📡 Collect the Compose Information
         id: detect
         run: |
-          if ${{ steps.changed.outputs.test_any_changed }}; then
+          if ${{ steps.filter.outputs.test }}; then
             composes="$(find "$GITHUB_WORKSPACE" -name 'compose.yml')"
           else
-            composes='${{ steps.changed.outputs.compose_all_changed_files }}'
+            composes='${{ steps.filter.outputs.compose_files }}'
           fi
           for compose in $composes; do
             dir="$(dirname "$compose")"
