ci(actions): Remove permissions from GitHub Actions token
It's not needed to pass any permissions by default.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,8 @@ on:
       - "**/compose.yml"
       - .github/workflows/deploy.yml
 
+permissions: {}
+
 jobs:
   Deploy:
     runs-on: Ubuntu-Latest
