--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,8 @@ on:
       - "**/compose.yml"
       - .github/workflows/test.yml
 
+permissions: {}
+
 jobs:
   detect:
     name: 🔍 Detect Compose Files
