--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ permissions: {}
 jobs:
   Deploy:
     runs-on: Ubuntu-Latest
+    timeout-minutes: 5
 
     steps:
       - name: 🛣️ Setup Tailscale
