--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,11 +30,13 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            ${{ secrets.PRE_COMMAND }}
-            git -C "${{ secrets.GIT_PATH }}" fetch
-            git -C "${{ secrets.GIT_PATH }}" reset -q --hard origin/main
+            git -C "$GIT_PATH" fetch
+            git -C "$GIT_PATH" reset -q --hard origin/main
             while read -r compose; do
               docker compose -f "$compose" up -d --quiet-pull
-            done < <(find "${{ secrets.GIT_PATH }}" -name 'compose.yml')
+            done < <(find "$GIT_PATH" -name 'compose.yml')
             docker image prune -af
             docker volume prune -af
+          envs: GIT_PATH
+        env:
+          GIT_PATH: ${{ secrets.GIT_PATH }}
