chore(immich): Expose the Immich server port
To use intranet address to make upload faster.

--- a/immich/compose.yml
+++ b/immich/compose.yml
@@ -18,6 +18,8 @@ services:
         target: /etc/localtime
       - source: immich_config
         target: /config/immich.json
+    ports:
+      - 2283:2283
     depends_on:
       database:
         condition: service_healthy
