--- a/immich/compose.yml
+++ b/immich/compose.yml
@@ -65,7 +65,7 @@ services:
   backup-database: &backup
     container_name: immich_backup-database
     image: docker.io/offen/docker-volume-backup:v2.43.4@sha256:bdb9b5dffee440a7d21b1b210cd704fd1696a2c29d7cbc6f0f3b13b77264a26a
-    environment:
+    environment: &backup_environment
       BACKUP_CRON_EXPRESSION: 0 5 * * *
       BACKUP_FILENAME: immich_%Y%m%d.{{ .Extension }}
       BACKUP_SKIP_BACKENDS_FROM_PRUNE: s3
@@ -95,12 +95,10 @@ services:
     <<: *backup
     container_name: immich_backup-library
     environment:
-      BACKUP_CRON_EXPRESSION: 0 5 * * *
-      BACKUP_FILENAME: immich_%Y%m%d.{{ .Extension }}
+      <<: *backup_environment
       BACKUP_SOURCES: /library
       BACKUP_ARCHIVE: &backup_library_archive /archive/library
       BACKUP_RETENTION_DAYS: 5
-      GPG_PASSPHRASE: $DB_PASSWORD
     env_file: []
     volumes:
       - ./library/library:/library/library:ro
@@ -108,6 +106,7 @@ services:
       - type: bind
         source: $BACKUP_DIR/library
         target: *backup_library_archive
+    depends_on: []
 
   cloudflare-tunnel:
     container_name: immich_cloudflare-tunnel
