--- a/immich/compose.yml
+++ b/immich/compose.yml
@@ -41,7 +41,7 @@ services:
     restart: always
 
   database:
-    container_name: immich_database
+    container_name: &immich_database immich_database
     image: ghcr.io/immich-app/postgres:16-vectorchord0.4.3-pgvectors0.3.0@sha256:70c4d9ae3d1921dac8ee89a631ceaf26c8979451250271415a2f9c3493d07638
     environment:
       POSTGRES_HOST: $DB_HOSTNAME
@@ -52,6 +52,7 @@ services:
       - database:/var/lib/postgresql/data
       - backup:/tmp/backup
     labels:
+      docker-volume-backup.exec-label: *immich_database
       docker-volume-backup.archive-pre: pg_dump -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' -f /tmp/backup/immich.sql
     restart: always
 
@@ -73,6 +74,7 @@ services:
       BACKUP_ARCHIVE: &backup_database_archive /archive/database
       BACKUP_RETENTION_DAYS: 7
       GPG_PASSPHRASE: $DB_PASSWORD
+      EXEC_LABEL: *immich_database
     env_file:
       - path: ../.env
         required: true
@@ -99,6 +101,7 @@ services:
       BACKUP_SOURCES: /library
       BACKUP_ARCHIVE: &backup_library_archive /archive/library
       BACKUP_RETENTION_DAYS: 5
+      EXEC_LABEL: none
     env_file: []
     volumes:
       - ./library/library:/library/library:ro
