--- a/misskey/compose.yml
+++ b/misskey/compose.yml
@@ -20,7 +20,7 @@ services:
     restart: always
 
   database:
-    container_name: misskey_database
+    container_name: &misskey_database misskey_database
     image: docker.io/postgres:16.9@sha256:918e8e72b35b5370901965ce3da5a355c3537cb5e10c38e82c2b6f174b758334
     environment:
       POSTGRES_HOST: $DB_HOSTNAME
@@ -33,6 +33,7 @@ services:
     healthcheck:
       test: pg_isready -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' || exit 1
     labels:
+      docker-volume-backup.exec-label: *misskey_database
       docker-volume-backup.archive-pre: pg_dump -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' -f /tmp/backup/misskey.sql
     restart: always
 
@@ -53,6 +54,7 @@ services:
       AWS_S3_PATH: $R2_PATH
       BACKUP_RETENTION_DAYS: 7
       GPG_PASSPHRASE: $DB_PASSWORD
+      EXEC_LABEL: *misskey_database
     env_file:
       - path: ../.env
         required: true
