--- a/speedtest-tracker/compose.yml
+++ b/speedtest-tracker/compose.yml
@@ -21,7 +21,7 @@ services:
     restart: always
 
   database:
-    container_name: speedtest-tracker_database
+    container_name: &speedtest-tracker_database speedtest-tracker_database
     image: docker.io/postgres:16.9@sha256:918e8e72b35b5370901965ce3da5a355c3537cb5e10c38e82c2b6f174b758334
     environment:
       POSTGRES_HOST: $DB_HOSTNAME
@@ -34,6 +34,7 @@ services:
     healthcheck:
       test: pg_isready -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' || exit 1
     labels:
+      docker-volume-backup.exec-label: *speedtest-tracker_database
       docker-volume-backup.archive-pre: pg_dump -d '$DB_DATABASE_NAME' -U '$DB_USERNAME' -f /tmp/backup/speedtest-tracker.sql
     restart: always
 
@@ -47,6 +48,7 @@ services:
       AWS_S3_PATH: $R2_PATH
       BACKUP_RETENTION_DAYS: 7
       GPG_PASSPHRASE: $DB_PASSWORD
+      EXEC_LABEL: *speedtest-tracker_database
     env_file:
       - path: ../.env
         required: true
